--- a/res/values/shishu_styles.xml
+++ b/res/values/shishu_styles.xml
@@ -23,10 +23,14 @@
     <!-- QuickSpace -->
     <style name="QuickSpaceText">
         <item name="android:fontFamily">@*android:string/config_headlineFontFamily</item>
+        <item name="android:shadowColor">#4D000000</item>
+        <item name="android:shadowRadius">1</item>
     </style>
 
     <style name="QuickSpaceSubText">
         <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
+        <item name="android:shadowColor">#4D000000</item>
+        <item name="android:shadowRadius">1</item>
     </style>
 
 </resources>
